# GalSim-Euclid-Like

./: .gitignore  CHANGELOG.rst  INSTALL.rst  LICENSE  README.md  README.rst  pyproject.toml
.github/workflows/: linting.yml  unittests.yml
config/: README.md  README.rst  slurm_runner.sh  was.yaml
docs/: conf.py  euclidlike.rst  euclidlike_imsim.rst  examples.rst  gh-link.py  history.rst  index.html  index.rst  install.rst  modules.rst
docs/_build/doctrees/: environment.pickle  euclidlike.doctree  euclidlike_imsim.doctree  examples.doctree  history.doctree  index.doctree  install.doctree  modules.doctree  overview.doctree  scripts.doctree
docs/_build/html/: .buildinfo  euclidlike.html  euclidlike_imsim.html  examples.html  genindex.html  history.html  index.html  install.html  modules.html  objects.inv  overview.html  py-modindex.html  scripts.html  search.html  searchindex.js
docs/source/: conf.py  euclidlike_imsim.rst  index.rst
euclidlike/: __init__.py  _version.py  backgrounds.py  bandpass.py  download_psf.py  euclidlike_psf.py  euclidlike_psfs.py  euclidlike_wcs.py  instrument_params.py
euclidlike/data/: README.md
euclidlike_imsim/: __init__.py  _version.py  bandpass.py  ccd.py  flux_err.py  noise.py  obseq.py  psf.py  skycat.py  stamp.py  wcs.py
euclidlike_imsim/data/: README.md
examples/: demo14.py  end_to_end_demo.py  focal_plane_layout.ipynb  obseq_example.ipynb  plot_VIS.py
galsim_euclidlike/: __init__.py  euclidlike_psf.py
scripts/: __init__.py  download_psf.py  make_euclidlike_pupil_plane.py  make_obseq.py
tests/: test_download.py  test_euclid_bandpass.py  test_euclid_bandpasses.py  test_euclidlike_wcs.py  test_params.py  test_psf.py  test_psf_fake.py  test_sky.py
validation/: CatalogValidation.ipynb  PSFModelTesting.ipynb
(+24 files in other folders)
