[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "EuclidLike"
version = "0.0.1"
authors = [
  { name="GalSim Developers", email="dummy@gmail.com" },
]
description = "GalSim helper function for Euclid-like simulation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GalSim"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.17",
    # "galsim @ git+https://github.com/GalSim-developers/GalSim#1294_from_images",
    "astropy>=2.0",
    "ngmix",
    "numba",
]

[project.urls]
"Homepage" = "https://github.com/GalSim-developers/GalSim-Euclid-Like"
"Bug Tracker" = "https://github.com/GalSim-developers/GalSim-Euclid-Like/issues"

[tool.setuptools]
packages = [
  "euclidlike",
  "euclidlike_imsim",
]
include-package-data = true

[tool.setuptools.package-data]
"*" = [
  "data/*.dat",
  "data/*.fits",
  "data/*.fits.gz",
]
